service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pythonflask-canary
spec:
  selector:
    app: pythonflask,pythonflask-v1,pythonflask-v2
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
